# airflow-provider

./: README.md  angreal.toml
airflow-provider-{{ provider-name }}/: README.md  setup.cfg
airflow-provider-{{ provider-name }}/airflow_provider_{{provider-slug}}/: __init__.py
airflow-provider-{{ provider-name }}/dev/: Dockerfile  docker-compose.yaml
airflow-provider-{{ provider-name }}/tests/: conftest.py
{{ provider_name }}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  setup.cfg
{{ provider_name }}/.angreal/: init.py  task_demo.py  task_release.py  task_setup.py  task_tests.py
{{ provider_name }}/.github/workflows/: release.yaml  test.yaml
{{ provider_name }}/dev/: Dockerfile  docker-compose.yaml
{{ provider_name }}/tests/: conftest.py
{{ provider_name }}/tests/unit/: test_hooks.py  test_operators.py  test_sensors.py  test_triggers.py
{{ provider_name }}/tests/unit/hooks/: test__init__.py
{{ provider_name }}/tests/unit/operators/: test__init__.py
{{ provider_name }}/tests/unit/sensors/: test__init__.py
{{ provider_name }}/tests/unit/triggers/: test__init__.py
{{ provider_name }}/{{provider_slug}}/: __init__.py  provider.py
{{ provider_name }}/{{provider_slug}}/hooks/: __init__.py
{{ provider_name }}/{{provider_slug}}/operators/: __init__.py
{{ provider_name }}/{{provider_slug}}/sensors/: __init__.py
{{ provider_name }}/{{provider_slug}}/triggers/: __init__.py
