[metadata]

name = {{provider_name}}
version = attr: {{provider_slug}}.__version__
url = 
author = {{ author_name }}
author_email = {{ author_email }}
description = {{ short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code=
    Homepage=
    Changelog=


[options]
python_requires = >=3.7
packages = find:
install_package_data = true
install_requires = 
    apache-airflow>=2.5.0
zip_safe=False

[options.extras_require]
dev =
    mypy
    pytest
    pytest-cov
    pre-commit
    build
    angreal>=2.1

[options.entry_points]
apache_airflow_provider=
  provider_info={{provider_slug}}.provider:get_provider_info


[options.packages.find]
include =
    {{provider_slug}}*

[tool:pytest]
testpaths = tests
addopts = --tb=short 

[mypy]
warn_unused_ignores = True
namespace_packages = True
explicit_package_bases = True
pretty = True
show_error_codes = True
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
show_error_context = True
color_output = True

[mypy-airflow.*]
ignore_missing_imports = True

[mypy-asgiref.*]
ignore_missing_imports = True

[build-system]
requires = [ "setuptools"]
build-backend = "setuptools.build_meta"

